[package]
name = "tokens-decimals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }